--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+* 1.17.0 (2014-XX-XX)
+
+ * added support for floating-point numbers as arguments for '%' and 'divisible by' operators
+
 * 1.16.3 (2014-XX-XX)
 
  * n/a
